feat: implement Spring Boot performance optimizations for jpackage builds
Based on Spring Boot efficient deployments documentation:

## Performance Optimizations Added:
- **Layered JARs**: Enable efficient dependency caching and management
- **AOT Compilation**: Ahead-of-time processing for faster startup
- **JAR Extraction**: Spring Boot's built-in extraction for optimal jpackage performance
- **JVM Tuning**: G1GC, string deduplication, optimized memory allocation

## Build Improvements:
- Extract JAR task using Spring Boot's jarmode=tools
- Updated GitHub Actions workflow to use extracted JAR structure
- Added comprehensive optimization documentation (OPTIMIZATION.md)
- Fixed JReleaser deprecated options warnings

## Performance Benefits:
- Faster application startup times
- Reduced memory footprint
- Better caching for dependency layers
- CDS and AOT cache friendly structure
- Optimized for production jpackage deployment

JAR structure now includes:
- lib/ folder with dependencies (extracted)
- Application classes in separate JAR
- Layered structure: dependencies, spring-boot-loader, snapshot-dependencies, application

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,8 +71,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Build JAR
+      - name: Build Optimized JAR
         run: ./gradlew bootJar
+
+      - name: Extract JAR for Optimal Performance
+        run: ./gradlew extractJar
 
       - name: Build JPackage Installer
         run: ./gradlew jreleaserAssemble
