--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -9,7 +9,8 @@ spring:
       chat: ollama
     ollama:
       chat:
-        model: qwen2.5:0.5b
+        options:
+          model: qwen2.5:0.5b
       init:
         pull-model-strategy: never
         embedding:
